test/elaboration/bad/typeclass_instance_unbound_datatype_constructor.mle
class H 'a { x : 'a }
instance H integer { x = 42 }